--- a/views/stylesheets/partials/_groups.scss
+++ b/views/stylesheets/partials/_groups.scss
@@ -24,6 +24,9 @@
     @include pie-clearfix;
     @include transition(all, 0.5s);
   }
+  .inner {
+    @include pie-clearfix;
+  }
   ul {
     margin: 0;
     li {
